--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,5 +7,12 @@ list-style:none;
   text-decoration:none;
 }
 .router{
-padding-left:20px;
+padding-left:40px;
+padding-right:40px;
+}
+.Navbar{
+  background-color:white;
+  position: fixed;
+  z-index: 300;
+  width:100%;
 }
