--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-  <header>Hellooo</header>
+<div class="Navbar">
+
   <ul class="nav">
     <li class="router">
       <a [routerLink]="['/login']"  >Login</a>
@@ -8,101 +8,7 @@
       <a [routerLink]="['/Home']"   >Home</a>
     </li>
   </ul>
-  <div>
-    <router-outlet></router-outlet>
-
-  </div>
-</div>
-
-<!-- <div class="container">
-  <div class="form">
-  <form class="example-form" #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Name</mat-label>
-      <input matInput placeholder="Your Name"
-            id ="name"
-            matInput
-            name="username" ngModel required minlength="6" #username="ngModel"
-          >
-
-
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Email</mat-label>
-      <input matInput placeholder="Your Email" id="email"
-          matInput
-          type="email"
-          name="email" ngModel required minlength="6" #email="ngModel"
-          aria-describedby="emailHid"
-          >
-      <small id="emailHid"
-      *ngIf="!email?.valid&& (email?.dirty|| email?.touched )"
-       >Email is invalid or empty</small>
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Address</mat-label>
-      <input matInput placeholder="Your Address"
-      id="address"
-      name="address" ngModel required #address="ngModel" >
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Password</mat-label>
-      <input matInput placeholder="Your Password"
-      type="password"
-      id="password"
-      aria-describedby="passwordHid"
-      name="password" ngModel required required minlength="6" #password="ngModel"
-      >
-      <small id="passwordHid"
-      *ngIf="!password?.valid&& (password?.dirty|| password?.touched )"
-      >password is invalid or empty</small>
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Number</mat-label>
-      <input matInput placeholder="Your Number"
-      id="number"
-      type="number"
-      name="number" ngModel required  minlength="10" maxlength="10" #number="ngModel">
-
-    </mat-form-field>
-
-<div class="Date">
-    <label id="example-radio-group-label">Gender</label>
-<mat-radio-group
-  aria-labelledby="example-radio-group-label"
-  class="example-radio-group"
-  [(ngModel)]="favoriteSeason" >
-  <mat-radio-button class="example-radio-button" *ngFor="let season of seasons" [value]="season" >
-    {{season}}
-  </mat-radio-button>
-</mat-radio-group>
 
 </div>
 
-  <div class="Date">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Choose a date</mat-label>
-      <input matInput [max]="maxDate" [matDatepicker]="picker"
-      name="date" ngModel required   #date="ngModel">
-      <mat-hint>MM/DD/YYYY</mat-hint>
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-  </div>
-
-  <div class="example-button-row">
-    <button mat-raised-button color="accent" class="fuse-mat-button-large w-full mt-6"
-    mat-flat-button
-    [color]="'primary'"
-    [disabled]="f.invalid"
-    >Submit</button>
-  </div>
-
-    </form>
-  </div>
-</div> -->
-
+<router-outlet></router-outlet>
